--- a/scss/style.scss
+++ b/scss/style.scss
@@ -285,7 +285,7 @@ p {
     font-size: 18px;
     padding: 17px;
     width: 27%;
-    background: #ff3a6d;
+    background: #020017;
     color: #ffffff;
     border: none;
     border-top-right-radius: 3px;
